; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/cavium/extr_uart_dev_oct16550.c_oct16550_wait_txhr_empty.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/cavium/extr_uart_dev_oct16550.c_oct16550_wait_txhr_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_bas = type { i32 }

@REG_LSR = common dso_local global i32 0, align 4
@LSR_THRE = common dso_local global i32 0, align 4
@REG_USR = common dso_local global i32 0, align 4
@USR_TXFIFO_NOTFULL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uart_bas*, i32, i32)* @oct16550_wait_txhr_empty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @oct16550_wait_txhr_empty(%struct.uart_bas* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.uart_bas*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.uart_bas* %0, %struct.uart_bas** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  br label %7

7:                                                ; preds = %23, %3
  %8 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %9 = load i32, i32* @REG_LSR, align 4
  %10 = call i32 @uart_getreg(%struct.uart_bas* %8, i32 %9)
  %11 = load i32, i32* @LSR_THRE, align 4
  %12 = and i32 %10, %11
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %7
  %15 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %16 = load i32, i32* @REG_USR, align 4
  %17 = call i32 @uart_getreg(%struct.uart_bas* %15, i32 %16)
  %18 = load i32, i32* @USR_TXFIFO_NOTFULL, align 4
  %19 = and i32 %17, %18
  %20 = icmp eq i32 %19, 0
  br label %21

21:                                               ; preds = %14, %7
  %22 = phi i1 [ false, %7 ], [ %20, %14 ]
  br i1 %22, label %23, label %26

23:                                               ; preds = %21
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @DELAY(i32 %24)
  br label %7

26:                                               ; preds = %21
  ret void
}

declare dso_local i32 @uart_getreg(%struct.uart_bas*, i32) #1

declare dso_local i32 @DELAY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
